<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.7</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <lombok.version>1.18.46</lombok.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-csv.version>1.14.1</commons-csv.version>
        <graalvm.version>25.0.3</graalvm.version>
        <bouncycastle.version>1.84</bouncycastle.version>
        <spring.cloud.version>2025.1.2</spring.cloud.version>
        <mybatis.spring.boot.version>4.0.0</mybatis.spring.boot.version>
        <mybatis.generator.version>1.4.2</mybatis.generator.version>

        <druid.version>1.2.28</druid.version>
        <springdoc.version>3.0.3</springdoc.version>
        <h2.version>2.4.240</h2.version>
        <hibernate-validator.version>8.0.4.Final</hibernate-validator.version>
        <mysql.version>9.7.0</mysql.version>
        <hikaricp.version>7.1.0</hikaricp.version>
        <selenium.version>4.45.0</selenium.version>
        <json-path.version>3.0.0</json-path.version>
        <jjwt.version>0.13.0</jjwt.version>
        <jose4j.version>0.9.6</jose4j.version>
        <dingtalk.version>1.1.100</dingtalk.version>
        <httpclient5.version>5.6.1</httpclient5.version>
        <poi.version>5.5.1</poi.version>
        <pdfbox.version>3.0.7</pdfbox.version>
        <thumbnailator.version>0.4.21</thumbnailator.version>

        <aspectjweaver.version>1.9.25.1</aspectjweaver.version>
        <calcite.version>1.42.0</calcite.version>
        <sql-formatter.version>2.0.5</sql-formatter.version>
        <javacc-maven-plugin.version>3.2.0</javacc-maven-plugin.version>
    </properties>

    <groupId>yubi</groupId>
    <artifactId>yu-bi-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.0.0</version>
    <name>yu-bi Parent</name>
    <description>yu-bi 独立开源项目的父级构建与版本管理模块</description>
    <url>https://github.com/xybigdata/yu-bi</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:xybigdata/yu-bi.git</connection>
        <developerConnection>scm:git:git@github.com:xybigdata/yu-bi.git</developerConnection>
        <url>https://github.com/xybigdata/yu-bi</url>
        <tag>main</tag>
    </scm>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <modules>
        <module>core</module>
        <module>security</module>
        <module>data-providers</module>
        <module>server</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.22.0</version>
            </dependency>
            <dependency>
                <groupId>org.graalvm.js</groupId>
                <artifactId>js-scriptengine</artifactId>
                <version>${graalvm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.graalvm.js</groupId>
                <artifactId>js</artifactId>
                <version>${graalvm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <parameters>true</parameters>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                    <configuration>
                        <argLine>-Djava.awt.headless=true</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.6.3</version>
                    <executions>
                        <execution>
                            <id>enforce-build-runtime</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireJavaVersion>
                                        <version>[21,)</version>
                                    </requireJavaVersion>
                                    <requireMavenVersion>
                                        <version>[3.9,)</version>
                                    </requireMavenVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <configuration>
                        <filesets>
                            <fileset>
                                <directory>static</directory>
                                <includes>
                                    <include>**</include>
                                </includes>
                            </fileset>
                            <fileset>
                                <directory>${project.basedir}</directory>
                                <includes>
                                    <include>yu-bi-server-*-install.zip</include>
                                </includes>
                            </fileset>
                        </filesets>
                    </configuration>
                </plugin>
            </plugins>
        </build>

</project>
